added to app.js and small css tweaks

--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./index.css" rel="stylesheet">
+        <script defer src="https://kit.fontawesome.com/ae5dbc9065.js" crossorigin="anonymous"></script>
+        <script defer src="./app.js"></script>
+        <title>Nathan Daniels</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a id="home-button" href="#banner">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#" id="projects-button">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#technologies">Technologies</a>
+                    </li>
+                    <li>
+                        <a id="social-button" href="#contact">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="banner">
+                <h1>Nathan Daniels</h1>
+                <h2>Software Engineer</h2>
+            </section>
+            <section id="projects">
+                <div class="project-card before">
+                    <img src="./food.jpg" alt="colorful food">
+                </div>
+                <div class="project-card before">
+                    <img src="./London1.jpeg" alt="London">
+                </div>
+                <div class="project-card before">
+                    <img src="./petplaces.jpg" alt="Pets4U logo">
+                </div>
+                <div class="project-card before">
+                    <img src="./Rectangle-27.png" alt="Woman lifting weights">
+                </div>
+                <div class="project-card">
+                    <img src="https://st2.depositphotos.com/3687485/10323/v/950/depositphotos_103239208-stock-illustration-color-easter-egg-cartoon-spring.jpg" >
+                </div>
+            </section>
+            <div id="social">
+                <i class="fas fa-envelope"></i>
+                <i class="fab fa-github"></i>
+                <i class="fab fa-linkedin-in"></i>
+            </div>
+        </main>
+    </body>
+</html>
