--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                 <h2>Software Engineer</h2>
             </section>
             <section id="projects">
-                <div class="project-card before">
+                <div class="project-card">
                     <img src="./food.jpg" alt="colorful food">
                 </div>
-                <div class="project-card before">
+                <div class="project-card">
                     <img src="./London1.jpeg" alt="London">
                 </div>
-                <div class="project-card before">
+                <div class="project-card">
                     <img src="./petplaces.jpg" alt="Pets4U logo">
                 </div>
-                <div class="project-card before">
+                <div class="project-card">
                     <img src="./Rectangle-27.png" alt="Woman lifting weights">
                 </div>
                 <div class="project-card">
@@ -53,9 +53,11 @@
                 </div>
             </section>
             <div id="social">
-                <i class="fas fa-envelope"></i>
-                <i class="fab fa-github"></i>
-                <i class="fab fa-linkedin-in"></i>
+                <div id="social-box">
+                    <a href ="mailto: nathandanielsbassoon@gmail.com" class="social-icon"><i class="fas fa-envelope fa-5x"></i></a>
+                    <a href="https://github.com/natedaniels42" target="_blank" class="social-icon"><i class="fab fa-github fa-5x"></i></a>
+                    <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i></a>
+                </div>
             </div>
         </main>
     </body>
