added new photos, moved all photos to images folder, more css and javascript changes

--- a/index.html
+++ b/index.html
@@ -37,24 +37,39 @@
             <section id="banner">
                 <h1>Nathan Daniels</h1>
                 <h2>Software Engineer</h2>
+                <img src="./images/HTML-logo.png" width="50px" height="50px">
+                <img src="./images/CSS-logo.png" width="50px" height="50px">
+                <img src="./images/JS-logo.png" width="50px" height="50px">
+                <img src="./images/jquery-logo.png" width="50px" height="50px">
+                <img src="./images/node-logo.jpg" width="50px" height="50px">
+                <img src="./images/mongodb-logo.png" width="50px" height="50px">
+                <img src="./images/react-logo.png" width="50px" height="50px">
+                <img src="./images/python-logo.png" width="50px" height="50px">
+                <img src="./images/postgres-logo.png" width="50px" height="50px">
+                <img src="./images/github-logo.png" width="50px" height="50px">
             </section>
             <section id="projects">
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
                 <div id="back"><i class="fas fa-arrow-circle-left fa-3x"></i></div>
                 <div class="project-card" id="card1">
-                    <img src="./food.jpg" alt="colorful food">
+                    <img src="./images/food.jpg" alt="colorful food">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error in atque expedita voluptatem perferendis blanditiis, tempore ab tenetur culpa voluptatibus suscipit ut esse natus laboriosam dolores debitis sunt. Doloremque, quidem?</p>
                 </div>
                 <div class="project-card" id="card2">
-                    <img src="./London1.jpeg" alt="London">
+                    <img src="./images/London1.jpeg" alt="London">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium corrupti cupiditate debitis quia veritatis nesciunt architecto? Harum autem optio in, dolore ratione eligendi architecto saepe repellendus nisi esse! Maxime, adipisci?</p>
                 </div>
                 <div class="project-card" id="card3">
-                    <img src="./petplaces.jpg" alt="Pets4U logo">
+                    <img src="./images/petplaces.jpg" alt="Pets4U logo">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic cupiditate tenetur libero accusamus, natus maxime ex minima illum delectus quaerat molestiae recusandae, aperiam, necessitatibus officiis porro eum ullam excepturi magnam?</p>
                 </div>
                 <div class="project-card" id="card4">
-                    <img src="./Rectangle-27.png" alt="Woman lifting weights">
+                    <img src="./images/Rectangle-27.png" alt="Woman lifting weights">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita repellendus officiis doloribus voluptas id illo odit veniam veritatis. Consectetur sed impedit dicta dolorum itaque facere voluptatem aliquid harum quidem ducimus!</p>
                 </div>
                 <div class="project-card" id="card5">
-                    <img src="https://st2.depositphotos.com/3687485/10323/v/950/depositphotos_103239208-stock-illustration-color-easter-egg-cartoon-spring.jpg" >
+                    <img src="./images/egg.jpg" alt="Colorful egg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, pariatur? Nihil soluta tenetur quo asperiores facilis deleniti veniam suscipit, quae porro maxime ipsam, reprehenderit assumenda nisi at consequuntur aliquid dolores?</p>
                 </div>
             </section>
             <div id="social">
