made hamburger menu functional

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#" id="projects-button">Projects</a>
                     </li>
                     <li>
-                        <a href="#technologies">Technologies</a>
+                        <a href="#technologies" id="tech-button">Technologies</a>
                     </li>
                     <li>
                         <a id="social-button" href="#contact">Contact Me</a>
@@ -37,16 +37,6 @@
             <section id="banner">
                 <h1>Nathan Daniels</h1>
                 <h2>Software Engineer</h2>
-                <img src="./images/HTML-logo.png" width="50px" height="50px">
-                <img src="./images/CSS-logo.png" width="50px" height="50px">
-                <img src="./images/JS-logo.png" width="50px" height="50px">
-                <img src="./images/jquery-logo.png" width="50px" height="50px">
-                <img src="./images/node-logo.jpg" width="50px" height="50px">
-                <img src="./images/mongodb-logo.png" width="50px" height="50px">
-                <img src="./images/react-logo.png" width="50px" height="50px">
-                <img src="./images/python-logo.png" width="50px" height="50px">
-                <img src="./images/postgres-logo.png" width="50px" height="50px">
-                <img src="./images/github-logo.png" width="50px" height="50px">
             </section>
             <section id="projects">
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
@@ -72,13 +62,50 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, pariatur? Nihil soluta tenetur quo asperiores facilis deleniti veniam suscipit, quae porro maxime ipsam, reprehenderit assumenda nisi at consequuntur aliquid dolores?</p>
                 </div>
             </section>
-            <div id="social">
+            <section id="tech">
+                <div id="tech-box">
+                    <div class="logo-column">
+                        <div class="logo">
+                            <img src="./images/HTML-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/CSS-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/JS-logo.png" width="100px" height="100px">
+                        </div>
+                    </div>
+                    <div class="logo-column">
+                        <div class="logo">
+                            <img src="./images/jquery-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/node-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/mongodb-logo.png" width="100px" height="100px">
+                        </div>
+                    </div>
+                    <div class="logo-column">
+                        <div class="logo">
+                            <img src="./images/react-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/python-logo.png" width="100px" height="100px">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/postgres-logo.png" width="100px" height="100px">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="social">
                 <div id="social-box">
                     <a href ="mailto: nathandanielsbassoon@gmail.com" class="social-icon"><i class="fas fa-envelope fa-5x"></i></a>
                     <a href="https://github.com/natedaniels42" target="_blank" class="social-icon"><i class="fab fa-github fa-5x"></i></a>
                     <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i></a>
                 </div>
-            </div>
+            </section>
         </main>
     </body>
 </html>
