added twinkling stars animation to CSS

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
             </nav>
         </header>
         <main>
+            <div id="star1" class="star"></div>
+            <div id="star2" class="star"></div>
+            <div id="star3" class="star"></div>
+            <div id="star4" class="star"></div>
+            <div id="star5" class="star"></div>
+            <div id="star6" class="star"></div>
+            <div id="star7" class="star"></div>
+            <div id="star8" class="star"></div>
+            <div id="star9" class="star"></div>
+            <div id="star10" class="star"></div>
+            <div id="star11" class="star"></div>
+            <div id="star12" class="star"></div>
+            <div id="star13" class="star"></div>
+            <div id="star14" class="star"></div>
+            <div id="star15" class="star"></div>
+            <div id="star16" class="star"></div>
+            <div id="star17" class="star"></div>
+            <div id="star18" class="star"></div>
+            <div id="star19" class="star"></div>
+            <div id="star20" class="star"></div>
             <section id="banner">
                 <h1>Nathan Daniels</h1>
                 <h2>Software Engineer</h2>
