changed settings on CSS stars

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
                 <div id="back"><i class="fas fa-arrow-circle-left fa-3x"></i></div>
                 <div class="project-card" id="card1">
-                    <img src="./images/food.jpg" alt="colorful food">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error in atque expedita voluptatem perferendis blanditiis, tempore ab tenetur culpa voluptatibus suscipit ut esse natus laboriosam dolores debitis sunt. Doloremque, quidem?</p>
+                    <a href="https://macro-meals42.herokuapp.com/" target="_blank"><img src="./images/food.jpg" alt="colorful food"></a>
+                    <p><strong>Macro Meals</strong> allows the user to search for healthy food options using custom macronutrient filters.  Choose the amount of fat, carbs, and protein you need or just browse through all the meal options.  Built using React with an Express backend and MongoDB</p>
                 </div>
                 <div class="project-card" id="card2">
-                    <img src="./images/London1.jpeg" alt="London">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium corrupti cupiditate debitis quia veritatis nesciunt architecto? Harum autem optio in, dolore ratione eligendi architecto saepe repellendus nisi esse! Maxime, adipisci?</p>
+                    <a href="https://wayfarer-42.herokuapp.com/" target="_blank"><img src="./images/London1.jpeg" alt="London"></a>
+                    <p><strong>Wayfarer</strong> is a travel blog allowing the users to set up an account and share their thoughts on a variety of exciting destinations.  Built using Python and Django.  This was a collaboration of 3 developers</p>
                 </div>
                 <div class="project-card" id="card3">
-                    <img src="./images/petplaces.jpg" alt="Pets4U logo">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic cupiditate tenetur libero accusamus, natus maxime ex minima illum delectus quaerat molestiae recusandae, aperiam, necessitatibus officiis porro eum ullam excepturi magnam?</p>
+                    <a href="https://protected-citadel-11690.herokuapp.com/" target="_blank"><img src="./images/petplaces.jpg" alt="Pets4U logo"></a>
+                    <p><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p>
                 </div>
                 <div class="project-card" id="card4">
                     <img src="./images/Rectangle-27.png" alt="Woman lifting weights">
