solved navlink issue with resizing

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita repellendus officiis doloribus voluptas id illo odit veniam veritatis. Consectetur sed impedit dicta dolorum itaque facere voluptatem aliquid harum quidem ducimus!</p>
                 </div>
                 <div class="project-card" id="card5">
-                    <img src="./images/egg.jpg" alt="Colorful egg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, pariatur? Nihil soluta tenetur quo asperiores facilis deleniti veniam suscipit, quae porro maxime ipsam, reprehenderit assumenda nisi at consequuntur aliquid dolores?</p>
+                    <a href="https://tamagotchi42.herokuapp.com/home.html" target="_blank"><img src="./images/egg.jpg" alt="Colorful egg"></a>
+                    <p><strong>Tamagotchi</strong> is a web version of the classic handheld pet game.  The goal is to keep your pet alive by feeding them, letting them sleep, and playing with them as needed.  Be careful not to overfeed them or overwork them or they will die.  This is a static website built using HTML, CSS, and Javascript, mostly utilizing JQuery. It also incorporates PHP to aid with deployment </p>
                 </div>
             </section>
             <section id="tech">
