prepped banner for animation

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <nav id="nav">
                 <ul id="nav-links">
                     <li>
-                        <a id="home-button" href="#banner">Home</a>
+                        <a id="home-button">Home</a>
                     </li>
                     <li>
-                        <a href="#about">About</a>
+                        <a id="about-button">About</a>
                     </li>
                     <li>
-                        <a href="#" id="projects-button">Projects</a>
+                        <a id="projects-button">Projects</a>
                     </li>
                     <li>
-                        <a href="#technologies" id="tech-button">Technologies</a>
+                        <a id="tech-button">Technologies</a>
                     </li>
                     <li>
-                        <a id="social-button" href="#contact">Contact Me</a>
+                        <a id="social-button">Contact Me</a>
                     </li>
                 </ul>
                 <i class="fas fa-ellipsis-h fa-2x" id="hamburger"></i>
@@ -55,8 +55,11 @@
             <div id="star19" class="star"></div>
             <div id="star20" class="star"></div>
             <section id="banner">
-                <h1>Nathan Daniels</h1>
-                <h2>Software Engineer</h2>
+                <h1 id="letter">N</h1><h1 id="letter">a</h1><h1>t</h1><h1>h</h1><h1>a</h1><h1>n</h1><h1>&nbsp;</h1><h1> D</h1><h1>a</h1><h1>n</h1><h1>i</h1><h1>e</h1><h1>l</h1><h1>s</h1><br>
+                <h2>S</h2><h2>o</h2><h2>f</h2><h2>t</h2><h2>w</h2><h2>a</h2><h2>r</h2><h2>e</h2><h2>&nbsp;</h2><h2>E</h2><h2>n</h2><h2>g</h2><h2>i</h2><h2>n</h2><h2>e</h2><h2>e</h2><h2>r</h2>
+            </section>
+            <section id="about">
+                <div id="about-box"></div>
             </section>
             <section id="projects">
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
