about section added and styled

--- a/index.html
+++ b/index.html
@@ -55,11 +55,25 @@
             <div id="star19" class="star"></div>
             <div id="star20" class="star"></div>
             <section id="banner">
-                <h1 id="letter">N</h1><h1 id="letter">a</h1><h1>t</h1><h1>h</h1><h1>a</h1><h1>n</h1><h1>&nbsp;</h1><h1> D</h1><h1>a</h1><h1>n</h1><h1>i</h1><h1>e</h1><h1>l</h1><h1>s</h1><br>
-                <h2>S</h2><h2>o</h2><h2>f</h2><h2>t</h2><h2>w</h2><h2>a</h2><h2>r</h2><h2>e</h2><h2>&nbsp;</h2><h2>E</h2><h2>n</h2><h2>g</h2><h2>i</h2><h2>n</h2><h2>e</h2><h2>e</h2><h2>r</h2>
+                <h1>Nathan Daniels</h1>
+                <h2>Software Engineer</h2>
             </section>
             <section id="about">
-                <div id="about-box"></div>
+                <div id="sample-images">
+                    <img src="./images/nate-outdoors.jpg" id="sample-image1" width="75px" height="75px" alt="man with wife outdoors">
+                    <img src="./images/nate-bassoon.jpg" id="sample-image2" width="75px" height="75px" alt="man playing bassoon">
+                    <img src="./images/alfine-tongue.jpg" id="sample-image3" width="75px" height="75px" alt="dog with tongue out">
+                </div>
+                <div id="about-inner">
+                    <div id="background-box"></div>
+                    <div id="text-box">
+                        <p id="about-slogan"><strong>Solution-centric software developer committed to designing and developing solutions to technical problems. High aptitude for building scalable and maintainable software to achieve company goals.</strong></p><br>
+                        <p>In software development I have found an avenue to express my passion for solving complex issues.  I love to take someone's vision and make it a reality. I accomplish this through tenacious research and complex reasoning.  If there is a solution I will not stop until I find it. </p><br>
+                        <p>In my free time I enjoy playing and arranging music.  I also enjoy spending time with my wife, Jennifer, and my dog, Alfine</p>
+                    </div>
+                    <div id="about-box">
+                    </div>
+                </div>
             </section>
             <section id="projects">
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
