small CSS tweaks

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <p><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p>
                 </div>
                 <div class="project-card" id="card4">
-                    <img src="./images/Rectangle-27.png" alt="Woman lifting weights">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita repellendus officiis doloribus voluptas id illo odit veniam veritatis. Consectetur sed impedit dicta dolorum itaque facere voluptatem aliquid harum quidem ducimus!</p>
+                    <a href="/"><img src="./images/Rectangle-27.png" alt="Woman lifting weights"></a>
+                    <p><strong>FitnessChain</strong> is a collaboration between a developer team and a UX/UI team.  While not a fully functioning app it is the realization of the design choices of the UX/UI team.  It is built using Express and MongoDB</p>
                 </div>
                 <div class="project-card" id="card5">
                     <a href="https://tamagotchi42.herokuapp.com/home.html" target="_blank"><img src="./images/egg.jpg" alt="Colorful egg"></a>
