added pointer to nav buttons

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <nav id="nav">
                 <ul id="nav-links">
                     <li>
-                        <a id="home-button">Home</a>
+                        <a class="nav-button" id="home-button">Home</a>
                     </li>
                     <li>
-                        <a id="about-button">About</a>
+                        <a class="nav-button" id="about-button">About</a>
                     </li>
                     <li>
-                        <a id="projects-button">Projects</a>
+                        <a class="nav-button" id="projects-button">Projects</a>
                     </li>
                     <li>
-                        <a id="tech-button">Technologies</a>
+                        <a class="nav-button" id="tech-button">Technologies</a>
                     </li>
                     <li>
-                        <a id="social-button">Contact Me</a>
+                        <a class="nav-button" id="social-button">Contact Me</a>
                     </li>
                 </ul>
                 <i class="fas fa-ellipsis-h fa-2x" id="hamburger"></i>
