Small CSS tweaks

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p id="about-slogan"><strong>Solution-centric software developer committed to designing and developing solutions to technical problems. High aptitude for building scalable and maintainable software to achieve company goals.</strong></p><br>
                         <p>In software development I have found an avenue to express my passion for solving complex problems.  I love to take someone's vision and make it a reality. I accomplish this through tenacious research and complex reasoning.  If there is a solution I will not stop until I find it. </p><br>
                         <p>In my free time I enjoy playing and arranging music.  I also enjoy spending time with my wife, Jennifer, and my dog, Alfine</p><br>
-                        <p>If you would like more information about me check out my resume <a href="./images/resume.pdf" download target="_blank">here</a></p>
+                        <p>If you would like more information about me check out my resume <a href="./images/Resume.pdf" download target="_blank">here</a></p>
                     </div>
                     <div id="about-box">
                     </div>
@@ -82,23 +82,23 @@
                 <div id="back"><i class="fas fa-arrow-circle-left fa-3x"></i></div>
                 <div class="project-card" id="card1">
                     <a href="https://macro-meals42.herokuapp.com/" target="_blank"><img src="./images/food.jpg" alt="colorful food">
-                    <p><strong>Macro Meals</strong> allows the user to search for healthy food options using custom macronutrient filters.  Choose the amount of fat, carbs, and protein you need or just browse through all the meal options.  Built using React with an Express backend and MongoDB</p></a>
+                    <p class="project-description"><strong>Macro Meals</strong> allows the user to search for healthy food options using custom macronutrient filters.  Choose the amount of fat, carbs, and protein you need or just browse through all the meal options.  Built using React with an Express backend and MongoDB</p></a>
                 </div>
                 <div class="project-card" id="card2">
                     <a href="https://wayfarer-42.herokuapp.com/" target="_blank"><img src="./images/London1.jpeg" alt="London">
-                    <p><strong>Wayfarer</strong> is a travel blog allowing the users to set up an account and share their thoughts on a variety of exciting destinations.  Built using Python and Django.  This was a collaboration of 3 developers</p></a>
+                    <p class="project-description"><strong>Wayfarer</strong> is a travel blog allowing the users to set up an account and share their thoughts on a variety of exciting destinations.  Built using Python and Django.  This was a collaboration of 3 developers</p></a>
                 </div>
                 <div class="project-card" id="card3">
                     <a href="https://protected-citadel-11690.herokuapp.com/" target="_blank"><img src="./images/petplaces.jpg" alt="Pets4U logo">
-                    <p><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p></a>
+                    <p class="project-description"><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p></a>
                 </div>
                 <div class="project-card" id="card4">
                     <a href="/"><img src="./images/Rectangle-27.png" alt="Woman lifting weights">
-                    <p><strong>FitnessChain</strong> is a collaboration between a developer team and a UX/UI team.  While not a fully functioning app it is the realization of the design choices of the UX/UI team.  It is built using Express and MongoDB</p></a>
+                    <p class="project-description"><strong>FitnessChain</strong> is a collaboration between a developer team and a UX/UI team.  While not a fully functioning app it is the realization of the design choices of the UX/UI team.  It is built using Express and MongoDB</p></a>
                 </div>
                 <div class="project-card" id="card5">
                     <a href="https://tamagotchi42.herokuapp.com/home.html" target="_blank"><img src="./images/egg.jpg" alt="Colorful egg">
-                    <p><strong>Tamagotchi</strong> is a web version of the classic handheld pet game.  The goal is to keep your pet alive by feeding them, letting them sleep, and playing with them as needed.  Be careful not to overfeed them or overwork them or they will die.  This is a static website built using HTML, CSS, and Javascript, mostly utilizing JQuery. It also incorporates PHP to aid with deployment </p></a>
+                    <p class="project-description"><strong>Tamagotchi</strong> is a web version of the classic handheld pet game.  The goal is to keep your pet alive by feeding them, letting them sleep, and playing with them as needed.  Be careful not to overfeed them or overwork them or they will die.  This is a static website built using HTML, CSS, and Javascript, mostly utilizing JQuery. It also incorporates PHP to aid with deployment </p></a>
                 </div>
             </section>
             <section id="tech">
