--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </ul>
                 <i class="fas fa-ellipsis-h fa-2x" id="hamburger"></i>
             </nav>
+            <hr>
         </header>
         <main>
             <div id="star1" class="star"></div>
@@ -143,8 +144,8 @@
             </section>
             <section id="social">
                 <div id="social-box">
-                    <a href ="mailto: nathandanielsbassoon@gmail.com" class="social-icon"><i class="fas fa-envelope fa-5x"></i></a>
-                    <a href="https://github.com/natedaniels42" target="_blank" class="social-icon"><i class="fab fa-github fa-5x"></i></a>
+                    <a href ="mailto: nathandanielsbassoon@gmail.com" class="social-icon" id="email-icon"><i class="fas fa-envelope fa-5x"></i></a>
+                    <a href="https://github.com/natedaniels42" target="_blank" class="social-icon" id="github-icon"><i class="fab fa-github fa-5x"></i></a>
                     <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i></a>
                 </div>
             </section>
