changed the nav links to be clickable

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <header>
             <nav id="nav">
                 <ul id="nav-links">
-                    <li>
-                        <a class="nav-button" id="home-button">Home</a>
+                    <li class="nav-button" id="home-button">
+                        <a>Home</a>
                     </li>
-                    <li>
-                        <a class="nav-button" id="about-button">About</a>
+                    <li class="nav-button" id="about-button">
+                        <a>About</a>
                     </li>
-                    <li>
-                        <a class="nav-button" id="projects-button">Projects</a>
+                    <li class="nav-button" id="projects-button">
+                        <a>Projects</a>
                     </li>
-                    <li>
-                        <a class="nav-button" id="tech-button">Technologies</a>
+                    <li class="nav-button" id="tech-button">
+                        <a>Technologies</a>
                     </li>
-                    <li>
-                        <a class="nav-button" href="./images/Resume.pdf" download target="_blank">Resume</a>
+                    <li class="nav-button">
+                        <a href="./images/Resume.pdf" download target="_blank">Resume</a>
                     </li>
-                    <li>
-                        <a class="nav-button" id="social-button">Contact Me</a>
+                    <li class="nav-button" id="social-button">
+                        <a>Contact Me</a>
                     </li>
                 </ul>
                 <i class="fas fa-ellipsis-h fa-2x" id="hamburger"></i>
