Temporarily removed a project from projects page

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     <a href="https://protected-citadel-11690.herokuapp.com/" target="_blank"><img src="./images/petplaces.jpg" alt="Pets4U logo">
                     <p class="project-description"><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p></a>
                 </div>
-                <div class="project-card" id="card4">
+                <!--<div class="project-card" id="card4">
                     <a href="/"><img src="./images/Rectangle-27.png" alt="Woman lifting weights">
                     <p class="project-description"><strong>FitnessChain</strong> is a collaboration between a developer team and a UX/UI team.  While not a fully functioning app it is the realization of the design choices of the UX/UI team.  It is built using Express and MongoDB</p></a>
-                </div>
-                <div class="project-card" id="card5">
+                </div> -->
+                <div class="project-card" id="card4">
                     <a href="https://tamagotchi42.herokuapp.com/home.html" target="_blank"><img src="./images/egg.jpg" alt="Colorful egg">
                     <p class="project-description"><strong>Tamagotchi</strong> is a web version of the classic handheld pet game.  The goal is to keep your pet alive by feeding them, letting them sleep, and playing with them as needed.  Be careful not to overfeed them or overwork them or they will die.  This is a static website built using HTML, CSS, and Javascript, mostly utilizing JQuery. It also incorporates PHP to aid with deployment </p></a>
                 </div>
